--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <div class="container-fluid">
+    <div class="container">
     <h1 class="jumbotron text-center"><img class="logo" src="Logo.png" /></h1>
     <div class="well">
       <h1 class="text-center">Coming Soon</h1><hr />
@@ -27,7 +27,7 @@
     </div>
 
 
-    <footer class="footer navbar-fixed-bottom">
+    <footer class="footer">
 
         <div class="container-fluid">
             <div class="row">
