--- a/index.html
+++ b/index.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="y952XT33alF39RuPlSSEJesx1CeilWBvdzpv3ZmbVO8" />
 
-    <title>Hello Neihgbor</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="y952XT33alF39RuPlSSEJesx1CeilWBvdzpv3ZmbVO8" />
 
-    <div class="container">
+  <title>Hello Neihgbor</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+
+  <div class="container">
     <h1 class="jumbotron text-center"><img class="logo" src="Logo.png" /></h1>
-    <div class="well">
-      <h1 class="text-center">Coming Soon</h1><hr />
-      <h3 class="text-center"> Reimagine Aging. Transform Living. </h3>
-      <h4 class="text-center"> HelloNeighbor helps aging adults live their best lives. </h4>
-      <hr>
-      <h5 class="text-center"> We connect care seekers with qualified care providers.</h5>
-      <h5 class="text-center">We Provide Aging Adults: </h5>
-      <h6 class="text-center"> <img src="companion.png"> Companionship
-      <img src="health.png"> Health & Safety
-      <img src="activities.png"> Activities </h6>
+    <div class="well text-center">
+      <h1>Coming Soon</h1>
+      <hr />
+      <h3> Reimagine Aging. Transform Living. </h3>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h4> HelloNeighbor helps aging adults live their best lives. </h4>
+        </div>
+        <h4> We connect care seekers with qualified care providers.</h4>
+        <h4>We Provide Aging Adults: </h4>
+        <h4>
+          <img src="companion.png"> Companionship
+          <img src="health.png"> Health &amp; Safety
+          <img src="activities.png"> Activities
+        </h4>
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="footer">
+
+    <div class="container-fluid">
+      <div class="row">
+
+        <!--First column-->
+        <div>
+          <div class="container-fluid text-center"> Contact Us</div><br />
+          <div class="container-fluid text-center">
+            <a href="https://www.facebook.com/RealHelloNeighborCo/"><img src="facebook.png"></a>
+            <a href="https://twitter.com/HelloNeighbor13"><img src="twitter.png"></a>
+            <a href="mailto:info@helloneighbor.co"><img src="email.png"></a>
+          </div>
+        </div>
       </div>
     </div>
 
+  </footer>
 
-    <footer class="footer">
+  <script type="text/javascript" src="http://my.hellobar.com/1afd25a62db606a5e2cb2607a7c66a36902ec4e5.js" async="async"></script>
 
-        <div class="container-fluid">
-            <div class="row">
+</body>
 
-                <!--First column-->
-                <div>
-                  <div class="container-fluid text-center"> Contact Us</div><br />
-                  <div class="container-fluid text-center">
-                    <a href="https://www.facebook.com/RealHelloNeighborCo/"><img src="facebook.png"></a>
-                    <a href="https://twitter.com/HelloNeighbor13"><img src="twitter.png"></a>
-                    <a href="mailto:info@helloneighbor.co"><img src="email.png"></a>
-                  </div>
-                </div>
-            </div>
-        </div>
-
-    </footer>
-
-    <script type="text/javascript" src="http://my.hellobar.com/1afd25a62db606a5e2cb2607a7c66a36902ec4e5.js" async="async"></script>
-
-  </body>
 </html>
