add panel format

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         <div class="panel-heading">
           <h4> HelloNeighbor helps aging adults live their best lives. </h4>
         </div>
-        <h4> We connect care seekers with qualified care providers.</h4>
-        <h4>We Provide Aging Adults: </h4>
-        <h4>
-          <img src="companion.png"> Companionship
-          <img src="health.png"> Health &amp; Safety
-          <img src="activities.png"> Activities
+        <h4>We connect care seekers with qualified care providers for:</h4>
+        <h4 class="text-center">
+          <ul>
+          <li><img src="companion.png"> Companionship</li>
+          <li><img src="health.png"> Health &amp; Safety</li>
+          <li><img src="activities.png"> Activities</li>
+          </ul>
         </h4>
       </div>
     </div>
